--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Một tuần nhiều biến động với Tổng thống Trump",
+    "content": "Trong tuần qua, Tổng thống Donald Trump đã trải qua nhiều biến động lớn, bao gồm cuộc tranh cãi với Tổng thống Ukraine Zelensky tại Nhà Trắng và việc tiếp đón các lãnh đạo cao cấp từ châu Âu. Dù có tiến triển trong việc thống nhất lệnh ngừng bắn tạm thời với Ukraine, ông Trump cũng đối mặt với áp lực từ thị trường tài chính và những thay đổi chính trị ở Canada, nơi Tân Thủ tướng Mark Carney đã chỉ trích các chính sách thuế quan của ông. Tình hình tại Greenland cũng mang đến những thách thức mới cho Tổng thống Trump khi đảng đối lập giành chiến thắng trong cuộc bầu cử gần đây.",
+    "link": "https://dantri.com.vn/the-gioi/mot-tuan-nhieu-bien-dong-voi-tong-thong-trump-20250315160930269.htm",
+    "cat": "thoi-su",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Tổng thống Trump đã gặp khó khăn gì trong tuần qua?",
+    "answers": [
+      {
+        "text": "Cuộc tranh cãi với Tổng thống Zelensky và áp lực từ thị trường tài chính.",
+        "correct": true
+      },
+      {
+        "text": "Việc ký thỏa thuận với Canada.",
+        "correct": false
+      },
+      {
+        "text": "Sự ủng hộ từ Quốc hội Mỹ.",
+        "correct": false
+      },
+      {
+        "text": "Các cuộc họp với các lãnh đạo châu Âu.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Các Ngoại trưởng G7 cố tránh rạn nứt giữa cuộc chiến thuế quan của Mỹ",
     "content": "Trong cuộc họp kéo dài ba ngày tại Canada, các ngoại trưởng G7 đã cố gắng đạt được thỏa thuận chung giữa những bất đồng về chính sách thuế quan của Mỹ và các vấn đề quốc tế khác. Ngoại trưởng Mỹ Marco Rubio đã thể hiện vai trò quan trọng trong việc thúc đẩy sự đồng thuận, bất chấp những lo ngại về quan hệ giữa Mỹ và Canada. Cuộc thảo luận còn xoay quanh các vấn đề như xung đột Ukraine và giải pháp hòa bình cho Trung Đông, trong khi các nhà ngoại giao nhấn mạnh tầm quan trọng của việc duy trì hợp tác giữa các quốc gia đồng minh.",
     "link": "https://dantri.com.vn/the-gioi/cac-ngoai-truong-g7-co-tranh-ran-nut-giua-cuoc-chien-thue-quan-cua-my-20250315164406767.htm",
@@ -1039,33 +1066,6 @@
     ]
   },
   {
-    "title": "Năm mẫu xe cho phái đẹp được Thaco Auto phân phối",
-    "content": "Thaco Auto đã giới thiệu năm mẫu xe dành riêng cho phái đẹp tại Việt Nam, bao gồm Kia Sonet, Mazda CX-5, Peugeot 2008, BMW X3 và MINI Clubman. Những mẫu xe này được thiết kế với phong cách trẻ trung, hiện đại và tiện ích, phù hợp với nhu cầu di chuyển trong đô thị của phụ nữ. Mỗi mẫu xe mang đến những tính năng nổi bật như hệ thống giải trí hiện đại, không gian nội thất thoải mái và các công nghệ hỗ trợ lái xe an toàn, hứa hẹn mang lại trải nghiệm lái xe tuyệt vời cho phái đẹp.",
-    "link": "https://vnexpress.net/nam-mau-xe-cho-phai-dep-duoc-thaco-auto-phan-phoi-4861785.html",
-    "cat": "oto-xe-may",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Những mẫu xe nào được Thaco Auto phân phối dành cho phái đẹp?",
-    "answers": [
-      {
-        "text": "Kia Sonet, Mazda CX-5, Peugeot 2008, BMW X3 và MINI Clubman",
-        "correct": true
-      },
-      {
-        "text": "Toyota Camry, Honda Accord, Ford Ranger",
-        "correct": false
-      },
-      {
-        "text": "Nissan Sunny, Hyundai Accent, Kia Morning",
-        "correct": false
-      },
-      {
-        "text": "Mazda 3, Subaru Outback, Mitsubishi Triton",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Khi nào đau đầu cảnh báo đột quỵ?",
     "content": "Đau đầu có thể là triệu chứng của nhiều vấn đề sức khỏe, nhưng khi đau đầu đột ngột và dữ dội, nó có thể cảnh báo đột quỵ. Triệu chứng đau đầu của đột quỵ thường xuất hiện đột ngột, kèm theo các dấu hiệu khác như khó khăn trong thăng bằng, khuôn mặt lệch, yếu cánh tay, và lời nói lắp bắp. Việc nhận biết sớm các triệu chứng này rất quan trọng để có thể ứng cứu kịp thời và tăng khả năng sống sót.",
     "link": "https://vnexpress.net/khi-nao-dau-dau-canh-bao-dot-quy-4861237.html",
@@ -1088,6 +1088,33 @@
       },
       {
         "text": "Đau đầu do mất ngủ",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Năm mẫu xe cho phái đẹp được Thaco Auto phân phối",
+    "content": "Thaco Auto đã giới thiệu năm mẫu xe dành riêng cho phái đẹp tại Việt Nam, bao gồm Kia Sonet, Mazda CX-5, Peugeot 2008, BMW X3 và MINI Clubman. Những mẫu xe này được thiết kế với phong cách trẻ trung, hiện đại và tiện ích, phù hợp với nhu cầu di chuyển trong đô thị của phụ nữ. Mỗi mẫu xe mang đến những tính năng nổi bật như hệ thống giải trí hiện đại, không gian nội thất thoải mái và các công nghệ hỗ trợ lái xe an toàn, hứa hẹn mang lại trải nghiệm lái xe tuyệt vời cho phái đẹp.",
+    "link": "https://vnexpress.net/nam-mau-xe-cho-phai-dep-duoc-thaco-auto-phan-phoi-4861785.html",
+    "cat": "oto-xe-may",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Những mẫu xe nào được Thaco Auto phân phối dành cho phái đẹp?",
+    "answers": [
+      {
+        "text": "Kia Sonet, Mazda CX-5, Peugeot 2008, BMW X3 và MINI Clubman",
+        "correct": true
+      },
+      {
+        "text": "Toyota Camry, Honda Accord, Ford Ranger",
+        "correct": false
+      },
+      {
+        "text": "Nissan Sunny, Hyundai Accent, Kia Morning",
+        "correct": false
+      },
+      {
+        "text": "Mazda 3, Subaru Outback, Mitsubishi Triton",
         "correct": false
       }
     ]
@@ -2190,33 +2217,6 @@
     ]
   },
   {
-    "title": "Phạt đòn trẻ là biện pháp có tính giáo dục, không nên cấm?",
-    "content": "Giáo sư Robert Larzelere từ Đại học bang Oklahoma cho rằng việc cha mẹ phạt đòn con có thể là một biện pháp giáo dục hiệu quả nếu áp dụng đúng cách. Ông phản biện lại quan điểm cấm phạt đòn trẻ nhỏ, cho rằng nó có thể giúp trẻ hiểu hậu quả của hành động và phát triển tốt hơn. Mặc dù một số chuyên gia cho rằng phạt đòn đã lỗi thời, Larzelere nhấn mạnh rằng biện pháp này cần được thực hiện một cách tiết chế và chỉ khi các phương pháp khác không có hiệu quả.",
-    "link": "https://dantri.com.vn/giao-duc/phat-don-tre-la-bien-phap-co-tinh-giao-duc-khong-nen-cam-20250315082156697.htm",
-    "cat": "giao-duc",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Phạt đòn trẻ có thực sự có tính giáo dục không?",
-    "answers": [
-      {
-        "text": "Có, nếu áp dụng đúng cách.",
-        "correct": true
-      },
-      {
-        "text": "Không, hoàn toàn không nên dùng.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ nên dùng trong trường hợp khẩn cấp.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ áp dụng cho trẻ lớn hơn 12 tuổi.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Ai dễ mắc và tái phát zona thần kinh?",
     "content": "Bài viết đề cập đến những người có nguy cơ cao mắc và tái phát zona thần kinh, bao gồm những người mắc bệnh nền như tiểu đường, tăng huyết áp, bệnh tim mạch và rối loạn lipid máu. Các bệnh lý này làm suy giảm hệ miễn dịch, tạo điều kiện cho virus Varicella Zoster hoạt động trở lại sau thời gian 'ngủ đông'. Để phòng ngừa, bác sĩ khuyến cáo người dân nên tiêm vaccine thủy đậu và zona thần kinh, đặc biệt là cho những người từ 50 tuổi trở lên hoặc có nguy cơ cao.",
     "link": "https://vnexpress.net/ai-de-mac-va-tai-phat-zona-than-kinh-4861703.html",
@@ -2243,6 +2243,33 @@
       },
       {
         "text": "Người cao tuổi không mắc bệnh nền",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Phạt đòn trẻ là biện pháp có tính giáo dục, không nên cấm?",
+    "content": "Giáo sư Robert Larzelere từ Đại học bang Oklahoma cho rằng việc cha mẹ phạt đòn con có thể là một biện pháp giáo dục hiệu quả nếu áp dụng đúng cách. Ông phản biện lại quan điểm cấm phạt đòn trẻ nhỏ, cho rằng nó có thể giúp trẻ hiểu hậu quả của hành động và phát triển tốt hơn. Mặc dù một số chuyên gia cho rằng phạt đòn đã lỗi thời, Larzelere nhấn mạnh rằng biện pháp này cần được thực hiện một cách tiết chế và chỉ khi các phương pháp khác không có hiệu quả.",
+    "link": "https://dantri.com.vn/giao-duc/phat-don-tre-la-bien-phap-co-tinh-giao-duc-khong-nen-cam-20250315082156697.htm",
+    "cat": "giao-duc",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Phạt đòn trẻ có thực sự có tính giáo dục không?",
+    "answers": [
+      {
+        "text": "Có, nếu áp dụng đúng cách.",
+        "correct": true
+      },
+      {
+        "text": "Không, hoàn toàn không nên dùng.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nên dùng trong trường hợp khẩn cấp.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ áp dụng cho trẻ lớn hơn 12 tuổi.",
         "correct": false
       }
     ]
