--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,37 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Mùa nóng, uống nước bao nhiêu là đủ?",
+    "content": "Mùa hè, người trưởng thành cần uống khoảng 1,5-2,5 lít nước mỗi ngày, và lượng nước này có thể tăng lên đến 2,5-3 lít đối với những người hoạt động nhiều và làm việc ngoài trời. Việc uống nước nên được thực hiện từng ngụm nhỏ và chia đều trong ngày, tránh uống quá nhiều cùng một lúc để không gây quá tải cho thận. Các dấu hiệu thiếu nước bao gồm mệt mỏi, chóng mặt và da khô, do đó việc duy trì thói quen uống nước thường xuyên là rất quan trọng để bảo vệ sức khỏe.",
+    "link": "https://vnexpress.net/mua-nong-uong-nuoc-bao-nhieu-la-du-4861216.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Người trưởng thành cần uống bao nhiêu lít nước mỗi ngày trong mùa nóng?",
+    "answers": [
+      {
+        "text": "1,5-2,5 lít",
+        "correct": true
+      },
+      {
+        "text": "1-1,5 lít",
+        "correct": false
+      },
+      {
+        "text": "2-3 lít",
+        "correct": false
+      },
+      {
+        "text": "3-4 lít",
+        "correct": false
+      },
+      {
+        "text": "0,5-1 lít",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Porsche cân nhắc thêm SUV chạy xăng mới",
     "content": "Porsche đang xem xét thêm một mẫu SUV chạy xăng mới vào danh mục sản phẩm của mình bên cạnh các mẫu xe điện như Macan EV và Cayenne. Trong hội nghị thường niên năm 2025, hãng đã khẳng định cam kết với động cơ đốt trong và xe hybrid, đồng thời tiết lộ rằng mẫu SUV mới có thể chia sẻ nền tảng với Audi Q5. Mẫu xe này sẽ có thiết kế riêng và nội thất cao cấp hơn. Bên cạnh đó, Porsche cũng cho biết sẽ cắt giảm khoảng 1.900 việc làm để thích ứng với thị trường.",
     "link": "https://vnexpress.net/porsche-can-nhac-them-suv-chay-xang-moi-4861673.html",
@@ -707,33 +738,6 @@
     ]
   },
   {
-    "title": "Khi nào đau đầu cảnh báo đột quỵ?",
-    "content": "Đau đầu có thể là triệu chứng của nhiều vấn đề sức khỏe, nhưng khi đau đầu đột ngột và dữ dội, nó có thể cảnh báo đột quỵ. Triệu chứng đau đầu của đột quỵ thường xuất hiện đột ngột, kèm theo các dấu hiệu khác như khó khăn trong thăng bằng, khuôn mặt lệch, yếu cánh tay, và lời nói lắp bắp. Việc nhận biết sớm các triệu chứng này rất quan trọng để có thể ứng cứu kịp thời và tăng khả năng sống sót.",
-    "link": "https://vnexpress.net/khi-nao-dau-dau-canh-bao-dot-quy-4861237.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 9,
-    "question": "Đau đầu như thế nào có thể cảnh báo đột quỵ?",
-    "answers": [
-      {
-        "text": "Đau đầu đột ngột và dữ dội",
-        "correct": true
-      },
-      {
-        "text": "Đau đầu âm ỉ kéo dài",
-        "correct": false
-      },
-      {
-        "text": "Đau đầu do căng thẳng",
-        "correct": false
-      },
-      {
-        "text": "Đau đầu do mất ngủ",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Năm mẫu xe cho phái đẹp được Thaco Auto phân phối",
     "content": "Thaco Auto đã giới thiệu năm mẫu xe dành riêng cho phái đẹp tại Việt Nam, bao gồm Kia Sonet, Mazda CX-5, Peugeot 2008, BMW X3 và MINI Clubman. Những mẫu xe này được thiết kế với phong cách trẻ trung, hiện đại và tiện ích, phù hợp với nhu cầu di chuyển trong đô thị của phụ nữ. Mỗi mẫu xe mang đến những tính năng nổi bật như hệ thống giải trí hiện đại, không gian nội thất thoải mái và các công nghệ hỗ trợ lái xe an toàn, hứa hẹn mang lại trải nghiệm lái xe tuyệt vời cho phái đẹp.",
     "link": "https://vnexpress.net/nam-mau-xe-cho-phai-dep-duoc-thaco-auto-phan-phoi-4861785.html",
@@ -756,6 +760,33 @@
       },
       {
         "text": "Mazda 3, Subaru Outback, Mitsubishi Triton",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Khi nào đau đầu cảnh báo đột quỵ?",
+    "content": "Đau đầu có thể là triệu chứng của nhiều vấn đề sức khỏe, nhưng khi đau đầu đột ngột và dữ dội, nó có thể cảnh báo đột quỵ. Triệu chứng đau đầu của đột quỵ thường xuất hiện đột ngột, kèm theo các dấu hiệu khác như khó khăn trong thăng bằng, khuôn mặt lệch, yếu cánh tay, và lời nói lắp bắp. Việc nhận biết sớm các triệu chứng này rất quan trọng để có thể ứng cứu kịp thời và tăng khả năng sống sót.",
+    "link": "https://vnexpress.net/khi-nao-dau-dau-canh-bao-dot-quy-4861237.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 9,
+    "question": "Đau đầu như thế nào có thể cảnh báo đột quỵ?",
+    "answers": [
+      {
+        "text": "Đau đầu đột ngột và dữ dội",
+        "correct": true
+      },
+      {
+        "text": "Đau đầu âm ỉ kéo dài",
+        "correct": false
+      },
+      {
+        "text": "Đau đầu do căng thẳng",
+        "correct": false
+      },
+      {
+        "text": "Đau đầu do mất ngủ",
         "correct": false
       }
     ]
@@ -1584,33 +1615,6 @@
     ]
   },
   {
-    "title": "Phẫu thuật cắt u buồng trứng giấu sẹo",
-    "content": "Bà Hạnh, 51 tuổi, đã thực hiện phẫu thuật nội soi cắt u buồng trứng qua ngả âm đạo (V-NOTES) tại Bệnh viện Đa khoa Tâm Anh TP HCM. Khối u kích thước lớn ở buồng trứng trái được cắt bỏ mà không để lại sẹo, giúp bệnh nhân hồi phục nhanh chóng và xuất viện sau 24 giờ. Phương pháp này giúp giảm đau và không ảnh hưởng đến các chức năng sinh lý như quan hệ tình dục hay sinh con, đồng thời có thể áp dụng cho phụ nữ béo phì.",
-    "link": "https://vnexpress.net/phau-thuat-cat-u-buong-trung-giau-seo-4861516.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Phẫu thuật cắt u buồng trứng giấu sẹo được thực hiện như thế nào?",
-    "answers": [
-      {
-        "text": "Bằng phương pháp nội soi qua ngả âm đạo",
-        "correct": true
-      },
-      {
-        "text": "Bằng phương pháp mở bụng truyền thống",
-        "correct": false
-      },
-      {
-        "text": "Bằng phương pháp siêu âm",
-        "correct": false
-      },
-      {
-        "text": "Bằng phương pháp phẫu thuật laser",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "7 quả giàu canxi nên ăn thường xuyên",
     "content": "Bài viết giới thiệu 7 loại quả giàu canxi mà mọi người nên ăn thường xuyên để duy trì sức khỏe xương và tim mạch. Các loại quả này bao gồm đu đủ, cam, quả sung, kiwi, mâm xôi, quả mơ và chanh, mỗi loại đều có các lợi ích dinh dưỡng riêng. Ngoài ra, bài viết cũng nhấn mạnh rằng việc tiêu thụ quá nhiều trái cây có thể dẫn đến một số tác dụng phụ.",
     "link": "https://vnexpress.net/7-qua-giau-canxi-nen-an-thuong-xuyen-4861604.html",
@@ -1633,6 +1637,33 @@
       },
       {
         "text": "Bơ, xoài, cà chua",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Phẫu thuật cắt u buồng trứng giấu sẹo",
+    "content": "Bà Hạnh, 51 tuổi, đã thực hiện phẫu thuật nội soi cắt u buồng trứng qua ngả âm đạo (V-NOTES) tại Bệnh viện Đa khoa Tâm Anh TP HCM. Khối u kích thước lớn ở buồng trứng trái được cắt bỏ mà không để lại sẹo, giúp bệnh nhân hồi phục nhanh chóng và xuất viện sau 24 giờ. Phương pháp này giúp giảm đau và không ảnh hưởng đến các chức năng sinh lý như quan hệ tình dục hay sinh con, đồng thời có thể áp dụng cho phụ nữ béo phì.",
+    "link": "https://vnexpress.net/phau-thuat-cat-u-buong-trung-giau-seo-4861516.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Phẫu thuật cắt u buồng trứng giấu sẹo được thực hiện như thế nào?",
+    "answers": [
+      {
+        "text": "Bằng phương pháp nội soi qua ngả âm đạo",
+        "correct": true
+      },
+      {
+        "text": "Bằng phương pháp mở bụng truyền thống",
+        "correct": false
+      },
+      {
+        "text": "Bằng phương pháp siêu âm",
+        "correct": false
+      },
+      {
+        "text": "Bằng phương pháp phẫu thuật laser",
         "correct": false
       }
     ]
@@ -1858,33 +1889,6 @@
     ]
   },
   {
-    "title": "Phạt đòn trẻ là biện pháp có tính giáo dục, không nên cấm?",
-    "content": "Giáo sư Robert Larzelere từ Đại học bang Oklahoma cho rằng việc cha mẹ phạt đòn con có thể là một biện pháp giáo dục hiệu quả nếu áp dụng đúng cách. Ông phản biện lại quan điểm cấm phạt đòn trẻ nhỏ, cho rằng nó có thể giúp trẻ hiểu hậu quả của hành động và phát triển tốt hơn. Mặc dù một số chuyên gia cho rằng phạt đòn đã lỗi thời, Larzelere nhấn mạnh rằng biện pháp này cần được thực hiện một cách tiết chế và chỉ khi các phương pháp khác không có hiệu quả.",
-    "link": "https://dantri.com.vn/giao-duc/phat-don-tre-la-bien-phap-co-tinh-giao-duc-khong-nen-cam-20250315082156697.htm",
-    "cat": "giao-duc",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Phạt đòn trẻ có thực sự có tính giáo dục không?",
-    "answers": [
-      {
-        "text": "Có, nếu áp dụng đúng cách.",
-        "correct": true
-      },
-      {
-        "text": "Không, hoàn toàn không nên dùng.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ nên dùng trong trường hợp khẩn cấp.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ áp dụng cho trẻ lớn hơn 12 tuổi.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Ai dễ mắc và tái phát zona thần kinh?",
     "content": "Bài viết đề cập đến những người có nguy cơ cao mắc và tái phát zona thần kinh, bao gồm những người mắc bệnh nền như tiểu đường, tăng huyết áp, bệnh tim mạch và rối loạn lipid máu. Các bệnh lý này làm suy giảm hệ miễn dịch, tạo điều kiện cho virus Varicella Zoster hoạt động trở lại sau thời gian 'ngủ đông'. Để phòng ngừa, bác sĩ khuyến cáo người dân nên tiêm vaccine thủy đậu và zona thần kinh, đặc biệt là cho những người từ 50 tuổi trở lên hoặc có nguy cơ cao.",
     "link": "https://vnexpress.net/ai-de-mac-va-tai-phat-zona-than-kinh-4861703.html",
@@ -1911,6 +1915,33 @@
       },
       {
         "text": "Người cao tuổi không mắc bệnh nền",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Phạt đòn trẻ là biện pháp có tính giáo dục, không nên cấm?",
+    "content": "Giáo sư Robert Larzelere từ Đại học bang Oklahoma cho rằng việc cha mẹ phạt đòn con có thể là một biện pháp giáo dục hiệu quả nếu áp dụng đúng cách. Ông phản biện lại quan điểm cấm phạt đòn trẻ nhỏ, cho rằng nó có thể giúp trẻ hiểu hậu quả của hành động và phát triển tốt hơn. Mặc dù một số chuyên gia cho rằng phạt đòn đã lỗi thời, Larzelere nhấn mạnh rằng biện pháp này cần được thực hiện một cách tiết chế và chỉ khi các phương pháp khác không có hiệu quả.",
+    "link": "https://dantri.com.vn/giao-duc/phat-don-tre-la-bien-phap-co-tinh-giao-duc-khong-nen-cam-20250315082156697.htm",
+    "cat": "giao-duc",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Phạt đòn trẻ có thực sự có tính giáo dục không?",
+    "answers": [
+      {
+        "text": "Có, nếu áp dụng đúng cách.",
+        "correct": true
+      },
+      {
+        "text": "Không, hoàn toàn không nên dùng.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nên dùng trong trường hợp khẩn cấp.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ áp dụng cho trẻ lớn hơn 12 tuổi.",
         "correct": false
       }
     ]
@@ -2113,6 +2144,37 @@
     ]
   },
   {
+    "title": "Biến chứng do viêm khớp cùng chậu",
+    "content": "Viêm khớp cùng chậu có thể gây ra nhiều biến chứng nghiêm trọng như cứng khớp, teo cơ, ảnh hưởng đến khả năng sinh sản và sức khỏe tinh thần. Khi viêm kéo dài mà không được điều trị đúng cách, người bệnh có thể gặp khó khăn trong vận động và thậm chí liệt chi. Để điều trị, người bệnh có thể sử dụng thuốc giảm đau, kết hợp với vật lý trị liệu, nhưng trong một số trường hợp nặng, phẫu thuật có thể là lựa chọn cần thiết.",
+    "link": "https://vnexpress.net/bien-chung-do-viem-khop-cung-chau-4861661.html",
+    "cat": "suc-khoe",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Biến chứng nào có thể xảy ra do viêm khớp cùng chậu nếu không điều trị đúng cách?",
+    "answers": [
+      {
+        "text": "Cứng khớp, teo cơ, ảnh hưởng khả năng sinh sản, trầm cảm",
+        "correct": true
+      },
+      {
+        "text": "Chỉ đau nhức nhẹ",
+        "correct": false
+      },
+      {
+        "text": "Không có biến chứng nào",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ảnh hưởng đến khả năng vận động",
+        "correct": false
+      },
+      {
+        "text": "Chỉ gây đau lưng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "5 món ăn hỗ trợ phòng cảm lạnh, cúm",
     "content": "Bài viết đề cập đến năm món ăn có lợi cho việc phòng ngừa cảm lạnh và cúm. Các thực phẩm như cá béo, hải sản, chocolate đen, trái cây họ cam quýt và các loại hạt được khuyến nghị để tăng cường hệ thống miễn dịch. Hải sản và cá béo cung cấp omega-3, trong khi chocolate đen và trái cây họ cam quýt cung cấp vitamin C và các khoáng chất cần thiết giúp bảo vệ cơ thể. Những thực phẩm này không chỉ ngon mà còn có tác dụng tích cực đối với sức khỏe trong mùa cảm cúm.",
     "link": "https://vnexpress.net/5-mon-an-ho-tro-phong-cam-lanh-cum-4861629.html",
@@ -2162,37 +2224,6 @@
       },
       {
         "text": "Mất nước nghiêm trọng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Biến chứng do viêm khớp cùng chậu",
-    "content": "Viêm khớp cùng chậu có thể gây ra nhiều biến chứng nghiêm trọng như cứng khớp, teo cơ, ảnh hưởng đến khả năng sinh sản và sức khỏe tinh thần. Khi viêm kéo dài mà không được điều trị đúng cách, người bệnh có thể gặp khó khăn trong vận động và thậm chí liệt chi. Để điều trị, người bệnh có thể sử dụng thuốc giảm đau, kết hợp với vật lý trị liệu, nhưng trong một số trường hợp nặng, phẫu thuật có thể là lựa chọn cần thiết.",
-    "link": "https://vnexpress.net/bien-chung-do-viem-khop-cung-chau-4861661.html",
-    "cat": "suc-khoe",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Biến chứng nào có thể xảy ra do viêm khớp cùng chậu nếu không điều trị đúng cách?",
-    "answers": [
-      {
-        "text": "Cứng khớp, teo cơ, ảnh hưởng khả năng sinh sản, trầm cảm",
-        "correct": true
-      },
-      {
-        "text": "Chỉ đau nhức nhẹ",
-        "correct": false
-      },
-      {
-        "text": "Không có biến chứng nào",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ảnh hưởng đến khả năng vận động",
-        "correct": false
-      },
-      {
-        "text": "Chỉ gây đau lưng",
         "correct": false
       }
     ]
@@ -3500,33 +3531,6 @@
       },
       {
         "text": "Nó có giá thành rẻ.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tuchel gọi Rashford lên tuyển Anh",
-    "content": "Thomas Tuchel, HLV mới của tuyển Anh, đã triệu tập Marcus Rashford trở lại đội tuyển để chuẩn bị cho vòng loại World Cup 2026. Rashford đã không thi đấu cho tuyển Anh kể từ tháng 3/2024 và vừa chuyển đến Aston Villa theo hợp đồng cho mượn. Trong buổi họp báo, Tuchel đã ca ngợi Rashford vì những đóng góp tích cực tại CLB mới và cho rằng đây là thời điểm thích hợp để triệu tập anh nhằm giúp anh duy trì phong độ. Vòng loại World Cup sẽ diễn ra từ ngày 21/3/2025.",
-    "link": "https://vnexpress.net/tuchel-goi-rashford-len-tuyen-anh-4861543.html",
-    "cat": "the-thao",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao Marcus Rashford được triệu tập lên tuyển Anh lần này?",
-    "answers": [
-      {
-        "text": "Vì anh thể hiện phong độ tốt tại Aston Villa.",
-        "correct": true
-      },
-      {
-        "text": "Vì anh là cầu thủ nổi tiếng nhất nước Anh.",
-        "correct": false
-      },
-      {
-        "text": "Vì anh đã ghi nhiều bàn thắng ở mùa giải này.",
-        "correct": false
-      },
-      {
-        "text": "Vì anh là đội trưởng của tuyển Anh.",
         "correct": false
       }
     ]
