--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Không đòi được 200.000 đồng tiền góp nhậu, cháu chém chú rồi lãnh 7 năm tù",
+    "content": "Trần Sang, 55 tuổi, đã chém chú ruột Trần Ngọc Tám (61 tuổi) sau khi xảy ra mâu thuẫn liên quan đến 200.000 đồng tiền góp nhậu. Vụ việc xảy ra vào rạng sáng ngày 1-5-2024, khi Sang tức giận vì không đòi lại được tiền. Hậu quả là ông Tám bị thương nặng với tổn thương cơ thể lên đến 57%. Tòa án nhân dân thành phố Huế đã tuyên phạt Trần Sang 7 năm tù về tội giết người, trong khi bị cáo có tiền sử bệnh tâm thần.",
+    "link": "https://tuoitre.vn/khong-doi-duoc-200-000-dong-tien-gop-nhau-chau-chem-chu-roi-lanh-7-nam-tu-20250319134124553.htm",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 8,
+    "question": "Tại sao Trần Sang lại chém chú ruột của mình?",
+    "answers": [
+      {
+        "text": "Vì không đòi được 200.000 đồng tiền góp nhậu.",
+        "correct": true
+      },
+      {
+        "text": "Vì mâu thuẫn về tài sản khác.",
+        "correct": false
+      },
+      {
+        "text": "Vì ông Tám không cho Sang mượn tiền.",
+        "correct": false
+      },
+      {
+        "text": "Vì ông Tám chửi Sang trong lúc nhậu.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Mối quan hệ đặc biệt giữa bộ ba kiện tướng Khánh Thi - Phan Hiển - Chí Anh",
     "content": "Bộ ba Khánh Thi, Phan Hiển và Chí Anh được ngưỡng mộ không chỉ vì tài năng mà còn vì mối quan hệ văn minh và tình bạn chân thành. Gần đây, Phan Hiển đã công bố bộ ảnh từ năm 2017 chụp cùng Khánh Thi và Chí Anh, thu hút sự chú ý của công chúng. Mặc dù Khánh Thi và Chí Anh từng có một mối tình kéo dài gần một thập kỷ, nhưng cả hai vẫn giữ được tình bạn tốt đẹp sau khi chia tay, hỗ trợ nhau trong sự nghiệp. Phan Hiển, hiện là chồng của Khánh Thi, cũng có mối quan hệ thân thiết với Chí Anh, điều này cho thấy sự gắn bó và tôn trọng lẫn nhau giữa họ.",
     "link": "https://dantri.com.vn/giai-tri/moi-quan-he-dac-biet-giua-bo-ba-kien-tuong-khanh-thi-phan-hien-chi-anh-20250319124250838.htm",
@@ -1288,6 +1315,37 @@
     ]
   },
   {
+    "title": "Trẻ rụng tóc do thiếu chất gì?",
+    "content": "Trẻ bị rụng tóc có thể do thiếu hụt nhiều loại vitamin và khoáng chất thiết yếu như vitamin B, C, D, sắt, kẽm và selen trong chế độ dinh dưỡng hàng ngày. Thiếu dinh dưỡng có thể dẫn đến tình trạng tóc rụng nhiều hơn 100 sợi mỗi ngày, tóc yếu và dễ gãy. Bác sĩ Trần Thị Trà Phương đã nhấn mạnh tầm quan trọng của việc bổ sung các chất dinh dưỡng này để giúp tóc phát triển khỏe mạnh và ngăn ngừa rụng tóc ở trẻ em.",
+    "link": "https://vnexpress.net/tre-rung-toc-do-thieu-chat-gi-4862999.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Trẻ rụng tóc do thiếu chất gì?",
+    "answers": [
+      {
+        "text": "Vitamin B, C, D và khoáng chất như sắt, kẽm",
+        "correct": true
+      },
+      {
+        "text": "Chất béo omega-3",
+        "correct": false
+      },
+      {
+        "text": "Vitamin A và E",
+        "correct": false
+      },
+      {
+        "text": "Chất xơ và protein",
+        "correct": false
+      },
+      {
+        "text": "Vitamin D và magie",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cô gái mắc chứng 'xương hóa đá'",
     "content": "Cô gái 28 tuổi ở Bắc Giang mắc bệnh xương hóa đá, một bệnh lý di truyền hiếm gặp, gây đau khớp và khó khăn trong vận động. Cô đã trải qua phẫu thuật thay khớp háng nhân tạo do tình trạng bệnh nghiêm trọng, khiến xương trở nên cứng nhưng lại rất giòn. Ca phẫu thuật kéo dài 5 giờ đã thành công, giúp cô thoát khỏi cơn đau và có thể đi lại bình thường.",
     "link": "https://vnexpress.net/co-gai-mac-chung-xuong-hoa-da-4863071.html",
@@ -1337,37 +1395,6 @@
       },
       {
         "text": "Bé bị va chạm với đồ vật trong nhà.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Trẻ rụng tóc do thiếu chất gì?",
-    "content": "Trẻ bị rụng tóc có thể do thiếu hụt nhiều loại vitamin và khoáng chất thiết yếu như vitamin B, C, D, sắt, kẽm và selen trong chế độ dinh dưỡng hàng ngày. Thiếu dinh dưỡng có thể dẫn đến tình trạng tóc rụng nhiều hơn 100 sợi mỗi ngày, tóc yếu và dễ gãy. Bác sĩ Trần Thị Trà Phương đã nhấn mạnh tầm quan trọng của việc bổ sung các chất dinh dưỡng này để giúp tóc phát triển khỏe mạnh và ngăn ngừa rụng tóc ở trẻ em.",
-    "link": "https://vnexpress.net/tre-rung-toc-do-thieu-chat-gi-4862999.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Trẻ rụng tóc do thiếu chất gì?",
-    "answers": [
-      {
-        "text": "Vitamin B, C, D và khoáng chất như sắt, kẽm",
-        "correct": true
-      },
-      {
-        "text": "Chất béo omega-3",
-        "correct": false
-      },
-      {
-        "text": "Vitamin A và E",
-        "correct": false
-      },
-      {
-        "text": "Chất xơ và protein",
-        "correct": false
-      },
-      {
-        "text": "Vitamin D và magie",
         "correct": false
       }
     ]
@@ -1821,33 +1848,6 @@
     ]
   },
   {
-    "title": "Hơn thập kỷ vô sinh do biến chứng đái tháo đường",
-    "content": "Anh Tiến, 47 tuổi, đã phải sống với tình trạng vô sinh suốt 12 năm do biến chứng đái tháo đường, dẫn đến rối loạn cương và không có tinh trùng. Sau khi điều trị tại các cơ sở y tế ở Mỹ mà không thành công, anh đã trở về Việt Nam để thực hiện phương pháp thụ tinh ống nghiệm tại IVF Tâm Anh TP HCM. Dù gặp khó khăn trong việc xuất tinh, bác sĩ vẫn tìm ra tinh trùng trong nước tiểu và áp dụng phương pháp TESE để thu tinh trùng cho quá trình thụ tinh ống nghiệm, với kết quả khả quan.",
-    "link": "https://vnexpress.net/hon-thap-ky-vo-sinh-do-bien-chung-dai-thao-duong-4862993.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Anh Tiến đã bị vô sinh do nguyên nhân gì?",
-    "answers": [
-      {
-        "text": "Biến chứng đái tháo đường",
-        "correct": true
-      },
-      {
-        "text": "Thiếu hoạt động thể chất",
-        "correct": false
-      },
-      {
-        "text": "Chế độ ăn uống kém",
-        "correct": false
-      },
-      {
-        "text": "Căng thẳng tâm lý",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nhiều nhân giáp gây nổi bướu vùng cổ người phụ nữ",
     "content": "Bài viết mô tả trường hợp của chị Hiền, 54 tuổi, ở TP.HCM, bị bướu giáp đa nhân sau khi phát hiện nổi u ở cổ. Qua chẩn đoán, bác sĩ xác định chị mắc ung thư biểu mô tuyến giáp thể nhú biến thể nang, tuy nhiên bệnh có tiên lượng tốt với tỷ lệ sống trên 5 năm hơn 98%. Sau ca phẫu thuật thành công, bệnh nhân hồi phục nhanh chóng và cần theo dõi định kỳ để phòng ngừa.",
     "link": "https://vnexpress.net/nhieu-nhan-giap-gay-noi-buou-vung-co-nguoi-phu-nu-4862920.html",
@@ -1870,6 +1870,33 @@
       },
       {
         "text": "Bệnh phổi mãn tính",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hơn thập kỷ vô sinh do biến chứng đái tháo đường",
+    "content": "Anh Tiến, 47 tuổi, đã phải sống với tình trạng vô sinh suốt 12 năm do biến chứng đái tháo đường, dẫn đến rối loạn cương và không có tinh trùng. Sau khi điều trị tại các cơ sở y tế ở Mỹ mà không thành công, anh đã trở về Việt Nam để thực hiện phương pháp thụ tinh ống nghiệm tại IVF Tâm Anh TP HCM. Dù gặp khó khăn trong việc xuất tinh, bác sĩ vẫn tìm ra tinh trùng trong nước tiểu và áp dụng phương pháp TESE để thu tinh trùng cho quá trình thụ tinh ống nghiệm, với kết quả khả quan.",
+    "link": "https://vnexpress.net/hon-thap-ky-vo-sinh-do-bien-chung-dai-thao-duong-4862993.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Anh Tiến đã bị vô sinh do nguyên nhân gì?",
+    "answers": [
+      {
+        "text": "Biến chứng đái tháo đường",
+        "correct": true
+      },
+      {
+        "text": "Thiếu hoạt động thể chất",
+        "correct": false
+      },
+      {
+        "text": "Chế độ ăn uống kém",
+        "correct": false
+      },
+      {
+        "text": "Căng thẳng tâm lý",
         "correct": false
       }
     ]
@@ -2188,64 +2215,6 @@
     ]
   },
   {
-    "title": "Bị PT ép tập gym quá sức",
-    "content": "Bài viết kể về Tùng, một người tập gym bị huấn luyện viên cá nhân (PT) ép tập luyện quá sức. Sau hai tuần với cường độ cao, Tùng cảm thấy cơ thể kiệt sức và phải dừng tập do chấn thương và các triệu chứng suy nhược. Ngoài Tùng, một trường hợp khác là Thúy Mai cũng gặp tình trạng tương tự khi bị ép tập với cường độ cao dẫn đến chấn thương. Các bác sĩ khuyến cáo rằng việc tập luyện cần có sự cân bằng và không nên ép cơ thể làm việc quá mức, nhằm tránh chấn thương và ảnh hưởng đến sức khỏe.",
-    "link": "https://vnexpress.net/bi-pt-ep-tap-gym-qua-suc-4862236.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Tại sao Tùng phải dừng tập gym?",
-    "answers": [
-      {
-        "text": "Vì bị ép tập quá sức dẫn đến kiệt sức và chấn thương.",
-        "correct": true
-      },
-      {
-        "text": "Vì không thích tập gym nữa.",
-        "correct": false
-      },
-      {
-        "text": "Vì không có thời gian tập.",
-        "correct": false
-      },
-      {
-        "text": "Vì không có huấn luyện viên cá nhân.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Phụ huynh bị đưa ra xét xử vì ép con \"thú tội\" giữa trời 7 độ C",
-    "content": "Một cặp phụ huynh ở Indiana, Mỹ, đang bị truy tố vì đã ép con gái 6 tuổi đứng ngoài trời lạnh 7 độ C trong nhiều giờ cầm tấm biển \"thú tội\". Họ cho rằng hình phạt này là cần thiết để dạy dỗ con gái, nhưng hành động này đã gây ra sự phẫn nộ trong cộng đồng. Cha của bé gái, một cảnh sát, vẫn khăng khăng cho rằng hình phạt này là cách duy nhất để giáo dục con. Cảnh sát đã vào cuộc sau khi có báo cáo từ những người qua đường chứng kiến sự việc.",
-    "link": "https://dantri.com.vn/giao-duc/phu-huynh-bi-dua-ra-xet-xu-vi-ep-con-thu-toi-giua-troi-7-do-c-20250318124813740.htm",
-    "cat": "phap-luat",
-    "positivity": 1,
-    "importance": 8,
-    "question": "Tại sao phụ huynh ở Indiana bị truy tố?",
-    "answers": [
-      {
-        "text": "Vì ép con đứng ngoài trời lạnh cầm biển \"thú tội\"",
-        "correct": true
-      },
-      {
-        "text": "Vì không cho con đi học",
-        "correct": false
-      },
-      {
-        "text": "Vì không chăm sóc con đúng cách",
-        "correct": false
-      },
-      {
-        "text": "Vì thường xuyên la mắng con",
-        "correct": false
-      },
-      {
-        "text": "Vì không cho con ăn uống đầy đủ",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "NSƯT Bùi Như Lai \"Cha tôi, người ở lại\": Nhận mình lạnh lùng, sợ… nổi tiếng",
     "content": "NSƯT Bùi Như Lai chia sẻ về cuộc sống và vai diễn trong bộ phim \"Cha tôi, người ở lại\", một tác phẩm Việt hóa từ phim Trung Quốc. Anh tự nhận mình là người lạnh lùng, không thích nổi tiếng và thường dành thời gian cho công việc quản lý tại Trường Đại học Sân khấu - Điện ảnh Hà Nội. Bùi Như Lai cũng nhấn mạnh tầm quan trọng của việc giữ gìn sự gần gũi với khán giả thông qua các vai diễn, mặc dù không muốn trở thành một ngôi sao giải trí. Anh đang hài lòng với cuộc sống bình dị cùng gia đình và công việc nghệ thuật.",
     "link": "https://dantri.com.vn/giai-tri/nsut-bui-nhu-lai-cha-toi-nguoi-o-lai-nhan-minh-lanh-lung-so-noi-tieng-20250317220936197.htm",
@@ -2353,6 +2322,64 @@
       },
       {
         "text": "Mọi người đều thích mùa xuân và không lo lắng.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bị PT ép tập gym quá sức",
+    "content": "Bài viết kể về Tùng, một người tập gym bị huấn luyện viên cá nhân (PT) ép tập luyện quá sức. Sau hai tuần với cường độ cao, Tùng cảm thấy cơ thể kiệt sức và phải dừng tập do chấn thương và các triệu chứng suy nhược. Ngoài Tùng, một trường hợp khác là Thúy Mai cũng gặp tình trạng tương tự khi bị ép tập với cường độ cao dẫn đến chấn thương. Các bác sĩ khuyến cáo rằng việc tập luyện cần có sự cân bằng và không nên ép cơ thể làm việc quá mức, nhằm tránh chấn thương và ảnh hưởng đến sức khỏe.",
+    "link": "https://vnexpress.net/bi-pt-ep-tap-gym-qua-suc-4862236.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao Tùng phải dừng tập gym?",
+    "answers": [
+      {
+        "text": "Vì bị ép tập quá sức dẫn đến kiệt sức và chấn thương.",
+        "correct": true
+      },
+      {
+        "text": "Vì không thích tập gym nữa.",
+        "correct": false
+      },
+      {
+        "text": "Vì không có thời gian tập.",
+        "correct": false
+      },
+      {
+        "text": "Vì không có huấn luyện viên cá nhân.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Phụ huynh bị đưa ra xét xử vì ép con \"thú tội\" giữa trời 7 độ C",
+    "content": "Một cặp phụ huynh ở Indiana, Mỹ, đang bị truy tố vì đã ép con gái 6 tuổi đứng ngoài trời lạnh 7 độ C trong nhiều giờ cầm tấm biển \"thú tội\". Họ cho rằng hình phạt này là cần thiết để dạy dỗ con gái, nhưng hành động này đã gây ra sự phẫn nộ trong cộng đồng. Cha của bé gái, một cảnh sát, vẫn khăng khăng cho rằng hình phạt này là cách duy nhất để giáo dục con. Cảnh sát đã vào cuộc sau khi có báo cáo từ những người qua đường chứng kiến sự việc.",
+    "link": "https://dantri.com.vn/giao-duc/phu-huynh-bi-dua-ra-xet-xu-vi-ep-con-thu-toi-giua-troi-7-do-c-20250318124813740.htm",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 8,
+    "question": "Tại sao phụ huynh ở Indiana bị truy tố?",
+    "answers": [
+      {
+        "text": "Vì ép con đứng ngoài trời lạnh cầm biển \"thú tội\"",
+        "correct": true
+      },
+      {
+        "text": "Vì không cho con đi học",
+        "correct": false
+      },
+      {
+        "text": "Vì không chăm sóc con đúng cách",
+        "correct": false
+      },
+      {
+        "text": "Vì thường xuyên la mắng con",
+        "correct": false
+      },
+      {
+        "text": "Vì không cho con ăn uống đầy đủ",
         "correct": false
       }
     ]
